Support job prioritization for waiting batches
Batches can now carry a priority that decides the order in which
waiting jobs are picked up. Higher priority runs first; batches
sharing a priority keep their submission order, so a deployment
where nobody sets a priority behaves exactly as before.

The priority can be set when submitting a batch and changed while
it is still waiting, via POST /batches/{id}/priority. Changing the
priority of a batch that has already started is a no-op rather than
an error. Priority is stored in its own column (migration V9,
defaulting to 0) and reported on both the single-batch and list
endpoints, and shown on the batch page in the UI.

Sessions are unaffected: they are not queued against a slot count,
so the endpoint only resolves batch ids.